2015-01-08  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/patternspage.h:
	* plugins/actions/textcorrection/taskspage.h:
	Fix bug #22489 : Text correction - ability to double click to swith enable status.

2015-01-08  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/patternspage.h:
	* plugins/actions/textcorrection/taskspage.h:
	Fix bug #22489 : Text correction does not remember which corrections to apply.

2015-01-08  kitone  <kitone@gna.org>

	* plugins/actions/bestfit/bestfit.cc:
	Fix bug #23151 : Using best fit subtitles on zero-length subtitles crashes subtitleeditor

2015-01-05  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Fix bug #22482 : Another regression of gtk3 port (waveform issue).

2015-01-05  kitone  <kitone@gna.org>

	* src/gui/spinbuttontime.cc:
	Fix bug #22493 : Move subtitles disallows moves by not multiplies of 0,100s.

2015-01-03  kitone  <kitone@gna.org>

	* plugins/actions/spellchecking/dialog-spell-checking.ui:
	* plugins/actions/spellchecking/spellchecking.cc:
	Fix bug #22488 : Regression in spellchecker.

2015-01-03  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	Fix bug #22492 : Crash when trying to open external player preferences.

2015-01-02  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix bug #22508 : Use (at least optionaly) relative paths in subtitle editor xml files (and optionally ass and ssa?).

2015-01-01  kitone  <kitone@gna.org>

	* plugins/actions/plaintext/plaintext.cc:
	Fix bug #22550 : Default saving mode defaults to plain text after importing a .txt script

2015-01-01  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	* src/gui/textviewcell.h:
	* src/subtitleview.cc:
	Fix bug #22857, bug #23018 patch from Philip Rinn and oi_wtf.

2014-08-31  kitone  <kitone@gna.org>
