@@ -1,5 +1,10 @@
 2015-01-08  kitone  <kitone@gna.org>
 
+	* plugins/actions/textcorrection/confirmationpage.h:
+	Fix bug #22489 : Text correction - ability to double click on confirmation page.
+
+2015-01-08  kitone  <kitone@gna.org>
+
 	* plugins/actions/textcorrection/patternspage.h:
 	* plugins/actions/textcorrection/taskspage.h:
 	Fix bug #22489 : Text correction - ability to double click to swith enable status.
